--- a/apkg.rc
+++ b/apkg.rc
@@ -1,5 +1,5 @@
 Package:		Syncovery
-Version:		7.84
+Version:		8.33a
 Packager:		D-Link
 Email:			jcnascimento@gmail.com
 Homepage:		https://github.com/jcnmedeiros
